# Algorithms-Project

./: Astar.cpp  Astar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  Converter.cpp  Converter.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  ISearcher.h  MazeMatrix.cpp  MazeMatrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  SearchSolver.h  Searchable.h  Searcher.cpp  Searcher.h  Server.h  Solver.h  State.h  StringReverser.h  main.cpp
